--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: firebase_login_register
+name: firebase_full_login_register_web
 description: Firebase login register & complete register 
 version: 0.0.1
 author: SanuInfotech
@@ -16,6 +16,9 @@ dependencies:
   firebase_auth: ^0.14.0+5
   cloud_firestore: ^0.13.7
   firebase_storage: ^3.1.6
+  google_sign_in: ^4.5.1
+  shared_preferences: ^0.5.8
+  firebase_auth_web:
 
 
 dev_dependencies:
